2004-03-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Process.cs: use the ISynchronizeInvoke object to invoke the event.
	Implemented Close, CloseMainWindow and Kill.

2004-03-23 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Switch.cs: Don't throw when there is no switches section.

2004-03-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Process.cs: support EnableRaisingEvents + Exited event.

2004-03-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Process.cs: patch by Gert Driesen that fixes WaitForExit when the
	timeout is int.MaxValue.

2004-03-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Process.cs: added environment variables setting support and also
	send useShellExecute to the runtime.

	* ProcessStartInfo.cs: support EnvironmentVariables.  MS uses
	StringDictionary, which turns keys into lowercase. We don't do that.

2004-02-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Process.cs: ExitCode and ExitTime check that the process is finished.

2003-12-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Process.cs: if there's an error when starting the process, the 'pid'
	field contains the GetLastError code. Use that for the Win32Exception.

2003-12-06  Martin Baulig  <martin@ximian.com>

	* DefaultTraceListener: Don't use `where' in variable names.

2003-11-13  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* ICollectData.cs: Fixed signature

2003-11-12  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* ICollectData.cs: Added missing attribute

2003-07-27  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* SRDescriptionAttribute.cs: Moved to System directory

2003-07-21  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* EventLog.cs: Implementation handling
	* EventLogImpl.cs: Added, contains an platform independent empty implementation
	for EventLog

2003-07-18  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* AlphabeticalEnumConverter.cs: Added
	* EventLogEntry.cs: Implemented